--- a/portfolio/cultureDay/css/jongmyo_main.css
+++ b/portfolio/cultureDay/css/jongmyo_main.css
@@ -73,13 +73,13 @@ tbody th { background-color: #cfcfcf; }
 
 #headBox > .title_box > .meet_joseon_box { width: 32.5vw; height: 32.5vw; background-color: rgba(66, 66, 66, 0.6); position: absolute; top: calc(50% - 225px); left: 33%; }
 
-#headBox > .title_box > .meet_joseon_box > .meet_joseon { width: 26vw; height: 26vw; background-image: url(../image/jongmyo_mainx4.png); background-repeat: no-repeat; background-size: contain; position: absolute; top: 10%; left: 22%; }
+#headBox > .title_box > .meet_joseon_box > .meet_joseon { width: 26vw; height: 26vw; background-image: url("../image/jongmyo_mainx4.png"); background-repeat: no-repeat; background-size: contain; position: absolute; top: 10%; left: 22%; }
 
 .indi_box { width: 30px; height: 800px; position: fixed; top: 240px; right: 15px; z-index: 500; }
 
 .indicator { width: 30px; height: 700px; padding-top: 5px; padding-left: 3px; box-sizing: border-box; }
 
-.roof_icon { width: 30px; height: 20px; background-image: url(../image/roof_indi@4x.png); background-repeat: no-repeat; background-size: contain; margin-right: 5px; /*background-color: #fff;*/ }
+.roof_icon { width: 30px; height: 20px; background-image: url("../image/roof_indi@4x.png"); background-repeat: no-repeat; background-size: contain; margin-right: 5px; /*background-color: #fff;*/ }
 
 .indi { width: 15px; height: 40px; background-color: #233052; margin-top: 20px; margin-left: 5px; box-sizing: border-box; border: 2px solid #fff; cursor: pointer; }
 
@@ -99,13 +99,13 @@ tbody th { background-color: #cfcfcf; }
 /*-- #historyBox----------------------------------------------------*/
 #historyBox { width: 100%; height: 100%; background-image: url(../image/jongmyo_history_back.jpg); background-repeat: no-repeat; background-size: 100%; background-position: center; float: left; box-sizing: border-box; position: relative; }
 
-.history { width: 340px; height: 480px; background-color: rgba(66, 66, 66, 0.8); float: left; padding-top: 60px; padding-left: 68px; box-sizing: border-box; position: absolute; left: 50%; top: 15%; margin-left: -340px; }
+.history { width: 340px; height: 480px; background-color: rgba(66, 66, 66, 0.8); float: left; padding-top: 60px; padding-left: 68px; box-sizing: border-box; position: absolute; left: 50%; top: 15%; margin-left: -340px; cursor: pointer; }
 .history .fplus_history { text-align: center; line-height: 30px; }
 .history i { transition: all 2s ease; }
 
 .history:hover i { transform: rotate(360deg); }
 
-.ceremony_music { width: 340px; height: 480px; background-color: rgba(255, 255, 255, 0.8); margin-top: 300px; float: left; padding-top: 80px; padding-left: 68px; box-sizing: border-box; position: absolute; left: 50%; bottom: 15%; }
+.ceremony_music { width: 340px; height: 480px; background-color: rgba(255, 255, 255, 0.8); margin-top: 300px; float: left; padding-top: 80px; padding-left: 68px; box-sizing: border-box; position: absolute; left: 50%; bottom: 15%; cursor: pointer; }
 .ceremony_music .fplus_music { text-align: center; line-height: 30px; }
 .ceremony_music i { transition: all 2s ease; }
 
@@ -131,16 +131,22 @@ tbody th { background-color: #cfcfcf; }
 
 .bgi_music > div > p { text-align: center; font-size: 30pt; font-weight: bold; color: #171e34; line-height: 60px; margin-top: 30px; }
 
+.modal_back { width: 100%; height: 100%; position: fixed; top: 0; left: 0; z-index: 1500; background-color: rgba(50, 50, 50, 0.7); padding-top: 80px; padding-left: 200px; box-sizing: border-box; display: none; }
+
+.h_modal { width: 80%; height: 90%; box-shadow: 0.3em 0.3em 0.3em rgba(10, 10, 10, 0.5); position: absolute; }
+
+.m_modal { width: 80%; height: 90%; box-shadow: 0.3em 0.3em 0.3em rgba(10, 10, 10, 0.5); position: absolute; }
+
 /*-- #party----------------------------------------------------*/
 #party { width: 100%; height: 90%; background-color: #3bf; float: left; }
 
 .poster { width: 100%; height: 100%; background-image: url(../image/h2_back_x4.png); background-repeat: no-repeat; background-size: cover; background-position: center; background-color: #23d; float: left; position: relative; }
 
-.h2_logo { width: 350px; height: 350px; background-image: url(../image/h2_logo.png); background-repeat: no-repeat; background-size: 100%; position: absolute; left: 80px; top: 40px; }
+.h2_logo { width: 250px; height: 250px; background-image: url(../image/h2_logo.png); background-repeat: no-repeat; background-size: 100%; position: absolute; left: 80px; top: 80px; }
 
-.mo_info { font-size: 12pt; color: #fff; position: absolute; z-index: 100; top: 410px; left: 80px; }
+.mo_info { font-size: 12pt; color: #fff; position: absolute; z-index: 100; top: 350px; left: 80px; }
 
-.modal_btn { width: 10em; height: 3em; border: 2px solid #fff; border-radius: 2em; padding: 0.8em 1.5em; box-sizing: border-box; font-size: 12pt; color: #fff; text-align: left; word-spacing: 30px; position: absolute; bottom: 200px; left: 80px; overflow: hidden; }
+.modal_btn { width: 10em; height: 3em; border: 2px solid #fff; border-radius: 2em; padding: 0.8em 1.5em; box-sizing: border-box; font-size: 12pt; color: #fff; text-align: left; word-spacing: 30px; position: absolute; bottom: 270px; left: 80px; overflow: hidden; }
 .modal_btn > a { width: 100%; height: 100%; display: block; }
 
 .modal_box { width: 100%; height: 100%; position: fixed; top: 0; left: 0; z-index: 1500; background-color: rgba(50, 50, 50, 0.7); padding-top: 80px; padding-left: 200px; box-sizing: border-box; display: none; }
@@ -215,15 +221,11 @@ right: 28px; top: 160px; z-index: 100;*/ }
 
 .btn { width: 50px; height: 100%; background-color: transparent; }
 
-.more_photo { width: 100px; height: 30px; border: solid 1px #5a595b; text-align: center; position: absolute; right: 60px; bottom: 30px; }
-
-.more_photo > a > p { margin-top: 5px; }
-
 /*-- #partition----------------------------------------------------*/
 #partition { width: 100%; height: 10%; background-color: #2d2d2d; float: left; }
 
 /*-- #timetable----------------------------------------------------*/
-#timetable { width: 100%; height: 100%; background-image: url(../image/main/door_2.jpg); background-repeat: no-repeat; background-size: cover; float: left; padding-top: 60px; box-sizing: border-box; position: relative; }
+#timetable { width: 100%; height: 100%; background-image: url("../image/main/door_2.jpg"); background-repeat: no-repeat; background-size: cover; float: left; padding-top: 60px; box-sizing: border-box; position: relative; }
 
 .table_wrap { width: 650px; height: 580px; padding-left: 25px; padding-top: 50px; box-sizing: border-box; margin-left: 100px; background-color: rgba(255, 255, 255, 0.7); float: left; }
 
@@ -311,7 +313,7 @@ right: 28px; top: 160px; z-index: 100;*/ }
 
 .tt_modal > div { width: 70%; height: 80%; background-color: #fff; box-sizing: border-box; box-shadow: 0.3em 0.3em 0.3em rgba(10, 10, 10, 0.5); position: absolute; top: 10%; left: 15%; z-index: 100; display: none; }
 
-.map_info { background-image: url(../image/K_sedan_chair.png); background-repeat: no-repeat; background-size: 100% 100%; }
+.map_info { background-image: url("../image/K_sedan_chair.png"); background-repeat: no-repeat; background-size: 100% 100%; }
 
 .tab { width: 90%; height: 70%; /*background-color: #b6f;*/ position: absolute; top: 10%; right: 5%; z-index: 200; }
 
@@ -329,7 +331,7 @@ right: 28px; top: 160px; z-index: 100;*/ }
 .tab_box>div:nth-of-type(2){background-color:#09a;}
 .tab_box>div:nth-of-type(3){background-color:#0a5;}
 .tab_box>div:nth-of-type(4){background-color:#0f1;}*/
-.map_img { width: 100%; height: 100%; background-image: url(../image/jongmyo_map.png); background-repeat: no-repeat; background-size: contain; background-position: center; }
+.map_img { width: 100%; height: 100%; background-image: url("../image/jongmyo_map.png"); background-repeat: no-repeat; background-size: contain; background-position: center; }
 
 /*안보이게*/
 .tab_box > div { display: none; }
