--- a/portfolio/cultureDay/css/jongmyo_main.css
+++ b/portfolio/cultureDay/css/jongmyo_main.css
@@ -97,7 +97,9 @@ tbody th { background-color: #cfcfcf; }
 #aboutJongmyo > .object_jongmyo { width: 25vw; height: 35vw; background-image: url(../image/about_jongmyo.png); background-size: contain; background-repeat: no-repeat; margin-right: 15%; margin-top: 12%; float: left; }
 
 /*-- #historyBox----------------------------------------------------*/
-#historyBox { width: 100%; height: 100%; background-image: url(../image/jongmyo_history_back.jpg); background-repeat: no-repeat; background-size: 100%; background-position: center; float: left; box-sizing: border-box; position: relative; }
+#historyBox { width: 100%; height: 100%; background-image: url(../image/jongmyo_history_back.jpg); background-repeat: no-repeat; background-size: 100%; background-position: center; float: left; box-sizing: border-box; }
+
+.btn_box { width: 690px; height: 900px; margin: 0; position: relative; left: 340px; }
 
 .history { width: 340px; height: 480px; background-color: rgba(66, 66, 66, 0.8); float: left; padding-top: 60px; padding-left: 68px; box-sizing: border-box; position: absolute; left: 50%; top: 15%; margin-left: -340px; cursor: pointer; }
 .history .fplus_history { text-align: center; line-height: 30px; }
@@ -133,9 +135,9 @@ tbody th { background-color: #cfcfcf; }
 
 .modal_back { width: 100%; height: 100%; position: fixed; top: 0; left: 0; z-index: 1500; background-color: rgba(50, 50, 50, 0.7); padding-top: 80px; padding-left: 200px; box-sizing: border-box; display: none; }
 
-.h_modal { width: 80%; height: 90%; box-shadow: 0.3em 0.3em 0.3em rgba(10, 10, 10, 0.5); position: absolute; }
+.h_modal { width: 70%; height: 80%; background-color: #fff; box-shadow: 0.3em 0.3em 0.3em rgba(10, 10, 10, 0.5); position: absolute; }
 
-.m_modal { width: 80%; height: 90%; box-shadow: 0.3em 0.3em 0.3em rgba(10, 10, 10, 0.5); position: absolute; }
+.m_modal { width: 70%; height: 80%; background-color: #fff; box-shadow: 0.3em 0.3em 0.3em rgba(10, 10, 10, 0.5); position: absolute; }
 
 /*-- #party----------------------------------------------------*/
 #party { width: 100%; height: 90%; background-color: #3bf; float: left; }
